--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name=".MainPage"/>
         <activity android:name=".RequestJob"/>
         <activity android:name=".goToInstantMessagingActivity"/>
+        <activity android:name=".InstantMessaging"/>
 
     </application>
 
