--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,12 @@
 
         <activity
             android:name=".MapsActivity">
-        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+        </activity>
+
+        <activity
+            android:name=".FindingJobMapsActivity">
+        </activity>
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
@@ -56,7 +61,6 @@
 
         <activity android:name=".MainPage"/>
         <activity android:name=".RequestJob"/>
-        <activity android:name=".goToInstantMessagingActivity"/>
         <activity android:name=".InstantMessaging"/>
 
     </application>
