--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
 
-        <activity android:name=".ProfileMaker"
+        <activity android:name=".MainPage"
             android:label="@string/title_activity_maps">
 
             <intent-filter>
@@ -59,7 +59,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".MainPage"/>
+        <activity android:name=".ProfileMaker"/>
         <activity android:name=".RequestJob"/>
         <activity android:name=".InstantMessaging"/>
 
